--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>Guess the number</title>
   </head>
   <body>    
+    <h1>Raad het juiste nummer!</h1>
     <script src="guess.js"></script>
   </body>
 </html>
